# Progect-NAMI

NAMI/: CMakeLists.txt  main.cpp  task.osm  task2.osm
NAMI/header/: GPSPoint.h  Line.h  OsmParser.h  Point.h
